--- a/templates/login.html
+++ b/templates/login.html
@@ -5,5 +5,32 @@
   </head>
   <body>
     <h1>Login</h1>
+    <button type="button" onclick="sendRequest()">Submit</button>
+    <script>
+      function sendRequest() {
+        const Http = new XMLHttpRequest();
+        Http.open("POST", "http://127.0.0.1:3200/login", true);
+        Http.setRequestHeader('Content-Type', 'application/json');
+        Http.send(JSON.stringify({
+          "username": "john",
+          "password": "password"
+        }));
+
+        Http.onload = function() {
+          console.log("HELLO")
+          console.log(this.responseText);
+          var data = JSON.parse(this.responseText);
+          console.log(data);
+        }
+        // let data = {username: "john", password: "password"};
+
+        // fetch("http://127.0.0.1:3200/login", {
+        //   method: "POST", 
+        //   body: JSON.stringify(data)
+        // }).then(res => {
+        //   console.log("Request complete! response:", res);
+        // });
+      }
+    </script>
   </body>
 </html>
