--- a/templates/SignUp.html
+++ b/templates/SignUp.html
@@ -2,17 +2,18 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Login</title>
+<title>Sign Up</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="CSS/NavBar.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="CSS/reset.css" rel="stylesheet" type="text/css">
-<link href="CSS/LoginStylesheet.css" rel="stylesheet" type="text/css">
+<link href="../static/stylesheets/SignUpStylesheet.css" rel="stylesheet" type="text/css">
+<link href="../static/stylesheets/reset.css" rel="stylesheet" type="text/css">
+<link href="../static/stylesheets/SignUpForm.css" rel="stylesheet" type="text/css">
+<link href="../static/stylesheets/NavBar.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 	
-		<!--Container for logo-->
+	<!--Container for logo-->
 	<div class="logoContainer">
 		<h1>Cinematic</h1>
 	</div> <!--End logo container-->
@@ -23,7 +24,7 @@
   <a href="#"><i class="fa fa-fw fa-bookmark"></i> Movies</a> 
   <a href="#"><i class="fa fa-fw fa-fire"></i> Trending</a> 
   <a href="Login.html"><i class="fa fa-fw fa-users"></i> Login</a>
-  <a href="#"><i class="fa fa-fw fa-sign-in"></i> SignUp</a>
+  <a href="SignUp.html"><i class="fa fa-fw fa-sign-in"></i> SignUp</a>
   <a href="#"><i class="fa fa-fw fa-user-circle"></i> Account</a>
   <a href="#"><i class="fa fa-fw fa-cart-plus"></i> Checkout</a>
 
@@ -37,28 +38,34 @@
   </div>
 </div> <!--End nav bar -->
 	
-<!--Login Form-->
-	<h2>Login Form</h2>
-<!--Form start-->
-<form action="/action_page.php" method="post">
-	  
+<!--Start Form-->
+
+	<form action="/action_page.php">
   <div class="container">
-    <label for="uname"><b>Username</b></label>
-    <input type="text" id="userContainer" placeholder="Enter Username" name="uname" required>
+    <h1>Register</h1>
+    <p>Please fill in this form to create an account.</p>
+    <hr>
+
+    <label for="email"><b>Email</b></label>
+    <input type="text" id="emailContainer" placeholder="Enter Email" name="email" required>
 
     <label for="psw"><b>Password</b></label>
     <input type="password" id="pswContainer" placeholder="Enter Password" name="psw" required>
-        
-    <button id="LoginBtn" type="submit">Login</button>
-  </div> <!--End container-->
 
-  <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn">Cancel</button>
-    <span class="signUp">Sign <a href="SignUp.html">Up</a></span>
-  </div> <!--End container-->
+    <label for="psw-repeat"><b>Repeat Password</b></label>
+    <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
+    <hr>
+    <p>By creating an account you agree to our Terms & Privacy</a>.</p>
+
+    <button type="submit" class="registerbtn">Register</button>
+  </div>
+  
+  <div class="container signin">
+    <p>Already have an account? <a href="Login.html">Log in</a>.</p>
+  </div>
 </form>
+	
+	
 
-	
-	
 </body>
 </html>
